--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: Gibson;
+    /*font-family: Gibson;*/
     font-style: normal;
     font-weight: 200;
     font-size: 14pt;
