--- a/static/main.css
+++ b/static/main.css
@@ -1,147 +1,160 @@
-
 body {
-    /*font-family: Gibson;*/
-    font-style: normal;
-    font-weight: 200;
-    font-size: 14pt;
-    /* background-color: #D2D3D4; */
+  /*font-family: Gibson;*/
+  font-style: normal;
+  font-weight: 200;
+  font-size: 14pt;
+  /* background-color: #D2D3D4; */
 }
 
 #profile-wrapper {
-    text-align: center;
+  text-align: center;
+  border: none;
+}
+
+.card-bio {
+  border: none;
+  width: 100%;
 }
 
 #profile-picture {
-    width:  200px;
-    height: 200px;
-    border-radius: 50%;
-    -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-    margin-left: auto;
-    margin-right: auto;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  /* -webkit-transform: scaleX(-1); */
+  /* transform: scaleX(-1); */
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.name {
+  color: #0064af;
+  font-size: xx-large;
+  text-transform: uppercase;
+}
 .short-bio {
-    text-align: justify;
-    z-index: 10;
+  text-align: justify;
+  z-index: 10;
+  font-size: larger;
 }
 
-ul.social-links  {
-    padding: 0;
-    list-style: none;
-    display: inline-block;
-    position: relative;
-    bottom: 0;
-    
+ul.social-links {
+  padding: 0;
+  list-style: none;
+  display: inline-block;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  bottom: 0;
 }
 
-.social-links li{
-    list-style: none;
-    display: inline-block;
-    z-index: 10;
+.social-links li {
+  list-style: none;
+  display: inline-block;
+  z-index: 10;
+  padding: 2px;
+}
+
+.social-text {
+  font-size: large;
+  font-weight: 500;
 }
 
 .social {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
+  /* margin-right: 10px; */
 }
 
 .theme-gray {
-    color:  #808184;
+  color: #808184;
 }
 .theme-gray-bg {
-     background: #808184;
+  background: #808184;
 }
 .theme-blue {
-    color:#0064AF;
+  color: #0064af;
 }
 .theme-blue-bg {
-    background: #0064AF;
+  background: #0064af;
 }
-
 
 .timeline-title {
-    font-weight: 400;
-    font-size:1.5rem;
+  font-weight: 400;
+  font-size: 1.5rem;
 }
-
 
 .timeline-subtitle {
-    font-weight: 200;
+  font-weight: 200;
 }
-ul.timeline-bullet-list  {
-    padding-inline-start: 1rem;
-    list-style-position: outside;
-    list-style: none;
+ul.timeline-bullet-list {
+  padding-inline-start: 1rem;
+  list-style-position: outside;
+  list-style: none;
 }
 ul.timeline-bullet-list li::before {
-    content: "\2022";
-    color: #0064AF;
-    display: inline-block; 
-    width: .8rem;
-    margin-left: -1rem;
+  content: "\2022";
+  color: #0064af;
+  display: inline-block;
+  width: 0.8rem;
+  margin-left: -1rem;
 }
 
 ul.timeline-bullet-list li {
-    text-align: justify;
+  text-align: justify;
 }
 
 ul.skills {
-    list-style: none;
-    padding-left: 0;
+  list-style: none;
+  padding-left: 0;
 }
 ul.skills li {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 .progress-bar {
-    text-align: unset;
-    padding-left: 1rem;
-
+  text-align: unset;
+  padding-left: 1rem;
 }
-.progress{
-    font-size: unset;
-    height: 2rem;
+.progress {
+  font-size: unset;
+  height: 2rem;
 }
 
 /****** Default for mobile *******/
 /* Timeline holder */
 ul.timeline {
-    list-style-type: none;
-    position: relative;
+  list-style-type: none;
+  position: relative;
 }
 
 /* Timelien item */
 li.timeline-item {
-    margin: 10px 10px;
-    /* padding-top: 2rem;
+  margin: 10px 10px;
+  /* padding-top: 2rem;
     padding-left: 6rem;
     padding-right: 2rem; */
 }
 
 /* Timeline Period */
 .timeline-period {
-    display: block;
-    position: relative;
-    color: #0064AF;
-    font-weight: 100;
+  display: block;
+  position: relative;
+  color: #0064af;
+  font-weight: 100;
 }
 
-
-
 /* tablet and up! */
-@media (min-width: 768px) { 
-
-/* Timeline holder */
-ul.timeline {
+@media (min-width: 768px) {
+  /* Timeline holder */
+  ul.timeline {
     list-style-type: none;
     position: relative;
     padding-left: 1.5rem;
-}
+  }
 
-/* Timeline vertical line */
-ul.timeline::before {
-    content: ' ';
-    background: #D2D3D4;
+  /* Timeline vertical line */
+  ul.timeline::before {
+    content: " ";
+    background: #d2d3d4;
     display: inline-block;
     position: absolute;
     left: 16px;
@@ -149,28 +162,28 @@ ul.timeline::before {
     height: 100%;
     z-index: 400;
     border-radius: 1rem;
-}
+  }
 
-li.timeline-item {
+  li.timeline-item {
     margin: 20px 0;
     padding-top: 2rem;
     padding-left: 6rem;
     padding-right: 2rem;
-}
+  }
 
-/* Timeline item arrow */
-.timeline-period {
+  /* Timeline item arrow */
+  .timeline-period {
     display: block;
     position: absolute;
     left: 2rem;
-    color: #0064AF;
+    color: #0064af;
     font-weight: 100;
-}
+  }
 
-/* Timeline item circle marker */
-li.timeline-item::before {
-    content: ' ';
-    background: #0064AF;
+  /* Timeline item circle marker */
+  li.timeline-item::before {
+    content: " ";
+    background: #0064af;
     display: inline-block;
     position: absolute;
     border-radius: 50%;
@@ -181,37 +194,30 @@ li.timeline-item::before {
     z-index: 400;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     margin-top: 3px;
-}
+  }
 
-
-
-ul.theme-list {
+  ul.theme-list {
     list-style-type: none;
     position: relative;
     padding-left: 1.5rem;
-}
+  }
 
-
-li.theme-list-item {
+  li.theme-list-item {
     margin: 0px 0;
     padding-top: 2rem;
     padding-left: 5rem;
     padding-right: 2rem;
-}
+  }
 
-
-.theme-list-focus {
+  .theme-list-focus {
     display: block;
     position: absolute;
     left: 0;
-    color: #0064AF;
+    color: #0064af;
     font-weight: 100;
-}
+  }
 
-
-ul.social-links  {
+  ul.social-links {
     position: absolute;
-    
-}
-
+  }
 }
